Feature/build package (#19)
* Updated npm dependencies
Changed buildTestPublishContainerDeploy workflow to build image
* Fixed error in ip-whitelist-authentication caused by wrong type
Updated Loopback dependencies in package.json
Rebuilt yarn.lock
* Updated action versions in buildTestPublishContainerDeploy workflow
* Updated cron and ejs dependencies to fix vulnerabilities
* Updated workflow to install via npm instead of yarn
* Fixed linting errors
* Updated workflow to use GITHUB_TOKEN
* Updated Dockerfile to install via npm
* Updated workflow to use docker/metadata-action for tagging
Updated helm/values.yaml to point to new image
* Updated image push step to use labels from docker metadata
* Updated values.yaml image version to use latest tag

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-  "editor.rulers": [80],
+  "editor.rulers": [
+    80
+  ],
   "editor.tabCompletion": "on",
   "editor.tabSize": 2,
   "editor.trimAutoWhitespace": true,
@@ -8,7 +10,6 @@
     "source.organizeImports": "explicit",
     "source.fixAll.eslint": "explicit"
   },
-
   "files.exclude": {
     "**/.DS_Store": true,
     "**/.git": true,
@@ -18,13 +19,15 @@
   },
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
-
   "typescript.tsdk": "./node_modules/typescript/lib",
   "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": false,
   "typescript.preferences.quoteStyle": "single",
   "eslint.run": "onSave",
   "eslint.nodePath": "./node_modules",
-  "eslint.validate": ["javascript", "typescript"],
+  "eslint.validate": [
+    "javascript",
+    "typescript"
+  ],
   "cSpell.words": [
     "addmeta",
     "addt",
